--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -78,7 +78,7 @@
 														</div>
 						                            </div>
 						                        </div>
-						                    </div><br>
+						                    </div>
 						                <% else %>
 						                	<div class="row">
 							                    <div class="col-md-6">
