--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,7 @@
 		                </button>
 		            </div>
 		            <div class="user-nav">
-
-		           			 <%= link_to new_indicator_path, :class => "button" do %><i class="fa fa-bar-chart"></i> Nouvel Indicateur<% end %>
+		           			 <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "button"}  do %><i class="fa fa-bar-chart"></i> Nouvel Indicateur<% end %>
 		               
 		            </div>
 		        </header>
