--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,47 +7,41 @@
   <%= csrf_meta_tags %>
 
 </head>
-<body>
-	 <section id="container">
-		<header id="header"  style="background-color:rgba(255,255,255,0.9);">
-		            <!--logo start-->
-		            <div class="brand">
-		                <a href="index.php" class="logo">Flexitech</a>
-		            </div>
-		            <!--logo end-->
-		            <div class="toggle-navigation toggle-left">
-		                <button type="button" class="btn btn-default" id="toggle-left" data-toggle="tooltip" data-placement="right" title="Toggle Navigation">
-		                    <i class="fa fa-bars"></i>
-		                </button>
-		            </div>
-		            <div class="user-nav">
-		           			 <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "button"}  do %><i class="fa fa-bar-chart"></i> Nouvel Indicateur<% end %>
-		               
-		            </div>	
-		        </header>
-		        <!--sidebar start-->
-		        <aside class="sidebar">
-		            <div id="leftside-navigation" class="nano">
 
-		    			<ul class="nano-content">
-		       				<li class="<%= 'active' if current_page?(root_path) %>">
-		       					<%= link_to root_path, data: { turbolinks: false } do %><i class="fa fa-bar-chart"></i> indicateurs<% end %>
-		                    </li>
-							<li>
-		                      <%= link_to indicators_path do %><i class="fa fa-book"></i> documentation<% end %>
-		                    </li>
-		                    </li>
-		    			</ul>
-					</div>
-
-		        </aside>
-		         <!--sidebar end-->
-		         <!--main content start-->	
-		<!-- end: header -->
+<body class="off-canvas">
+    <div id="container">
+        <header id="header">
+            <!--logo start-->
+            <div class="brand">
+            	 <%= link_to root_path, data: { turbolinks: false }, :class => "logo" do %><span>Flexi</span>tech<% end %>
+            </div>
+            <!--logo end-->
+            <div class="toggle-navigation toggle-left">
+                <button type="button" class="btn btn-default" id="toggle-left" data-toggle="tooltip" data-placement="right" title="Toggle Navigation">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+            <div class="user-nav">
+                <ul>
+                   <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "btn btn-primary"}  do %><i class="fa fa-bar-chart"></i> Nouvel Indicateur<% end %>
+                </ul>
+            </div>
+        </header>
+        <!--sidebar left start-->
+        <nav class="sidebar sidebar-left">
+            <h5 class="sidebar-header">Navigation</h5>
+            <ul class="nav nav-pills nav-stacked">
+                <li class="<%= 'active' if current_page?(root_path) %>">
+                    <%= link_to root_path, data: { turbolinks: false } do %><i class="fa fa-bar-chart"></i> indicateurs<% end %>
+                </li>
+                <li>
+		            <%= link_to indicators_path do %><i class="fa fa-book"></i> documentation<% end %>
+		        </li>
+            </ul>
+        </nav>
+        <!--sidebar left end-->
 
 		<%= yield %>
-           
-    </section>
-     <!--Global JS-->
+    
 </body>
 </html>
