--- a/app/views/indicators/_form.html.erb
+++ b/app/views/indicators/_form.html.erb
@@ -1,10 +1,9 @@
-
-<div class="modal-header">
-					   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-					   <h3 id="myModalLabel">Nouvel Indicateur</h3>
-					 </div>
-					 <div class="modal-body">
-					   <%= form_for @indicator do |f| %>
+				<div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel"> Indicator</h4>
+                </div>
+                <div class="modal-body">
+                    <%= form_for @indicator do |f| %>
 							<% if @indicator.errors.any? %>
 								<div id="errors">
 									<h2><%= pluralize(@indicator.errors.count, "error") %> prevented this indicator from saving</h2>
@@ -34,18 +33,13 @@
 							<p>
 								<%= f.label :data %><br>
 								<%= f.text_area :data, :placeholder => "Entrer les données", :class=>"form-control", :style=>"min-height: 100px;" %>
-							</p>
-							<div class="pull-left">
-								 <button class="button" data-dismiss="modal" aria-hidden="true">Close</button>
-							</div>
-							<div class="pull-right">
-								<%= f.submit %>
-							</div>
-						
-
-					 </div>
-					 
-<% end %>
+							</p>     
+			                <div class="modal-footer">
+			                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			                   <%= f.submit :class=>"btn btn-primary"  %>
+			                </div>
+					<% end %>
+				</div>
 
 
 							                                	
