--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -65,7 +65,7 @@
 							                            <div class="panel-heading">
 							                                <h5 class="panel-title">HR</h5>
 							                                <div class="actions pull-right">
-							                                	 <%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "button"}  do %><i class="fa fa-edit"></i> Edit<% end %>
+							                                	 <%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %>Edit<% end %> | 
 							                                    <%= link_to 'X', indicator_path(indicator),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button" %>
 							                                </div>
 							                            </div>
@@ -86,7 +86,7 @@
 							                            <div class="panel-heading">
 							                                <h5 class="panel-title">HR</h5>
 							                                <div class="actions pull-right">
-							                                    	<%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "button"}  do %><i class="fa fa-edit"></i> Edit<% end %>
+							                                    	<%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %>Edit<% end %> |
 							                                    <%= link_to 'X', indicator_path(indicator),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button"%>
 							                                </div>
 							                            </div>
@@ -105,11 +105,15 @@
             </section>
          </section>
          <!--main content end-->
-         <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			  <div class="modal-dialog" role="document">
-			    <div class="modal-content">
-			    	
-			    </div>
-			  </div>
-			</div>
-	
+         <!-- Basic Modal -->
+    <div id="modal-window" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+
+    </div>
+  </div>
+</div>
+    <!-- End Basic Modal -->
+	  <!-- Form Modal -->
+
+	    <!-- End Form Modal -->
