--- a/app/views/indicators/_form.html.erb
+++ b/app/views/indicators/_form.html.erb
@@ -16,7 +16,7 @@
 							<% end %>
 							<p>
 								<%= f.label :graph %><br>
-								<%= f.select(:graph, ['column','bar','pie','line','area'], {}, { :class => 'form-control' }) %>
+								<%= f.select(:graph, ['column','bar','line','area','stacked_column','stacked_bar','stacked_area'], {}, { :class => 'form-control' }) %>
 							</p>
 							<p>
 								<%= f.label :name %><br>
