--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<section id="login-container">
+        <div class="row">
+            <div class="col-md-3" id="login-wrapper">
+                <div class="panel panel-primary animated flipInY">
+                    <div class="panel-heading">
+                          <h3 class="panel-title">     
+                           Forgot your password?
+                        </h3>  
+                    </div>
+                    <div class="panel-body">
+                        <p >Already a member? <%= render "devise/shared/links" %></p>
+                        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  						<%= devise_error_messages! %>
+                            <div class="form-group">
+                                  <%= f.label :email %><br />
+    								<%= f.email_field :email, autofocus: true, :class =>'form-control' %>
+                            </div>
+                          		<%= f.submit "Send me reset password instructions", :class => "btn btn-primary btn-block" %>
+                          
+                        <% end %>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    </section>
