--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,73 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<section class="main-content-wrapper">
+            <section id="main-content">
+        <div class="row">
+            <div class="col-md-3" id="login-wrapper">
+                <div class="panel panel-primary animated flipInY">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">     
+                           Edit <%= resource_name.to_s.humanize %>
+                        </h3>      
+                    </div>
+                    <div class="panel-body">
+                       <p> Login to access your account.</p>
+                       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+                      <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <%= f.label :email %><br />
+                                    <%= f.email_field :email, autofocus: true,:class => "form-control"  %>
+                                   
+                                </div>
+                            </div>
+                            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                          <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+                          <div class="form-group">
+                             <div class="col-md-12">
+                                <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+                                <%= f.password_field :password, autocomplete: "off",:class => "form-control" %>
+                                <% if @minimum_password_length %>
+                                  <br />
+                                  <em><%= @minimum_password_length %> characters minimum</em>
+                                <% end %>
+                             </div>
+                          </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+                           <div class="form-group">
+                              <div class="col-md-12">
+                            <%= f.label :password_confirmation %><br />
+                            <%= f.password_field :password_confirmation, autocomplete: "off",:class => "form-control" %>
+                            </div>
+                          </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+                           <div class="form-group">
+                            <div class="col-md-12">
+                            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+                            <%= f.password_field :current_password, autocomplete: "off",:class => "form-control" %>
+                            </div>
+                          </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+                            <div class="form-group">
+                               <div class="col-md-12">
+                                    <%= f.submit "Update",:class => "btn btn-primary btn-block" %>
+                                    <hr />
+                                    <%= render "devise/shared/links" %>
+                                </div>
+                            </div>
+                        <% end %>
+                        <h3>Cancel my account</h3>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+                        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+                        <%= link_to "Back", :back %>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<h3>Cancel my account</h3>
+  </section>
+         </section>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
