--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 
 </head>
-
+<% if user_signed_in? %>
 <body class="off-canvas">
     <div id="container">
         <header id="header">
@@ -16,7 +16,6 @@
             	 <%= link_to root_path, data: { turbolinks: false }, :class => "logo" do %><span>Flexi</span>tech<% end %>
             </div>
             <!--logo end-->
-            <% if user_signed_in? %>
             <div class="toggle-navigation toggle-left">
                 <button type="button" class="btn btn-default" id="toggle-left" data-toggle="tooltip" data-placement="right" title="Toggle Navigation">
                     <i class="fa fa-bars"></i>
@@ -24,8 +23,23 @@
             </div>
             <div class="user-nav">
                 <ul>
+                   <li>
                    <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "btn btn-primary"}  do %><i class="fa fa-bar-chart"></i> Nouvel Indicateur<% end %>
-                   <%= link_to 'Déconnexion', destroy_user_session_path, :method => :delete, class: "button" %>
+                   </li>
+                 
+                   <li class="dropdown settings">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <%= current_user.email %> <i class="fa fa-angle-down"></i>
+                    </a>
+                        <ul class="dropdown-menu animated fadeInDown">
+                            <li>
+                                <li><%= link_to 'Edit', edit_user_registration_path %></li>
+                            </li>
+                            <li>
+                                 <%= link_to 'Déconnexion', destroy_user_session_path, :method => :delete, class: "button" %>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </header>
@@ -44,12 +58,11 @@
         <!--sidebar left end-->
         <% flash.each do |name, msg| %>
          <div class="flash text-center">
-            <%= content_tag(:div, msg, class: "alert alert-info") %>
+            <%= content_tag(:div, msg, class: "alert alert-success") %>
           </div>
         <% end %>
-        <% else %>
-            
-       <% end %>
+
+<% end %>
 		<%= yield %>
     
 </body>
