--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,20 +23,19 @@
             </div>
             <div class="user-nav">
                 <ul>
-                   <li>
-                   <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', :class => "btn btn-primary"}  do %><i class="fa fa-bar-chart"></i> Nouvel Indicateur<% end %>
-                   </li>
-                 
                    <li class="dropdown settings">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <%= current_user.email %> <i class="fa fa-angle-down"></i>
                     </a>
                         <ul class="dropdown-menu animated fadeInDown">
-                            <li>
-                                <li><%= link_to 'Edit', edit_user_registration_path %></li>
+                             <li>
+                                <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-bar-chart"></i> Add indicator<% end %>
                             </li>
                             <li>
-                                 <%= link_to 'Déconnexion', destroy_user_session_path, :method => :delete, class: "button" %>
+                                <%= link_to edit_user_registration_path  do %><i class="fa fa-edit"></i> Edit<% end %>
+                            </li>
+                            <li>
+                                <%= link_to destroy_user_session_path, :method => :delete  do %><i class="fa fa-sign-out"></i> Logout<% end %>
                             </li>
                         </ul>
                     </li>
