--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,14 @@
                     <%= current_user.email %> <i class="fa fa-angle-down"></i>
                     </a>
                         <ul class="dropdown-menu animated fadeInDown">
-                             <li>
-                                <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-bar-chart"></i> Add indicator<% end %>
-                            </li>
+                           <% if current_user.admin? %>
+                                <li>
+                                    <%= link_to new_indicator_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-bar-chart"></i> Add indicator<% end %>
+                                </li>
+                                <li>
+                                    <%= link_to new_kpi_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-kpi'}  do %><i class="fa fa-dashboard"></i> Add kpi<% end %>
+                                </li>
+                            <% end %>
                             <li>
                                 <%= link_to edit_user_registration_path  do %><i class="fa fa-edit"></i> Edit<% end %>
                             </li>
