--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -6,8 +6,17 @@
 					<div class="dashboard-tile detail tile-<%= kpi.color %>">
 						<div class="content">
 							<% if current_user.admin? %>
-								<%= link_to edit_kpi_path(kpi), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-kpi'}  do %>Edit<% end %> | 
-								<%= link_to 'Delete', kpi_path(kpi),data: {:confirm => 'Are you sure?'}, :method => :delete %>
+								<div class="btn-group">
+								    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+								          <i class="fa fa-cog" style="color:white"></i><span class="caret"></span>
+								    </button>
+								     <ul class="dropdown-menu" role="menu">
+								        <li><%= link_to edit_kpi_path(kpi), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-kpi'} do %><i class="fa fa-edit"></i> Edit<% end %>
+								        </li>
+								        <li><%= link_to kpi_path(kpi),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button" do %><i class="fa fa-trash-o"></i> Delete<% end %>
+								       	</li>
+								      </ul>
+								</div>
 							<% end %>
 							<h1 class="text-left timer" data-speed="2500" data-to="180" data-from="0">
 								<%= kpi.datum %>
@@ -33,9 +42,16 @@
 							                                <h5 class="panel-title">HR</h5>
 							                                <div class="actions pull-right">
 							                                	<% if current_user.admin? %>
-							                                	 	<%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %>Edit<% end %> | 
-							                                    	<%= link_to 'Delete', indicator_path(indicator),data: {:confirm => 'Are you sure?'}, :method => :delete %>
-							                                   	<% end %>
+							                                	<div class="btn-group">
+								                                       <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+								                                        <i class="fa fa-cog" style="color:white"></i><span class="caret"></span>
+								                                      </button>
+								                                      <ul class="dropdown-menu" role="menu">
+								                                        <li><%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-edit"></i> Edit<% end %></li>
+								                                        <li><%= link_to indicator_path(indicator),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button" do %><i class="fa fa-trash-o"></i> Delete<% end %></li>
+								                                      </ul>
+								                                    </div>
+							                                    <% end %>
 							                                </div>
 							                            </div>
 							                            <div class="panel-body">
@@ -56,8 +72,15 @@
 							                                <h5 class="panel-title">HR</h5>
 							                                <div class="actions pull-right">
 							                                	<% if current_user.admin? %>
-							                                    	<%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %>Edit<% end %> |
-							                                    	<%= link_to 'Delete', indicator_path(indicator),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button"%>
+							                                	<div class="btn-group">
+								                                       <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+								                                        <i class="fa fa-cog" style="color:white"></i><span class="caret"></span>
+								                                      </button>
+								                                      <ul class="dropdown-menu" role="menu">
+								                                        <li><%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-edit"></i> Edit<% end %></li>
+								                                        <li><%= link_to indicator_path(indicator),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button" do %><i class="fa fa-trash-o"></i> Delete<% end %></li>
+								                                      </ul>
+								                                    </div>
 							                                    <% end %>
 
 							                                </div>
