--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -7,8 +7,8 @@
 						<div class="content">
 							<% if current_user.admin? %>
 								<div class="btn-group">
-								    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-								          <i class="fa fa-cog" style="color:white"></i><span class="caret"></span>
+								    <button type="button" class="btn btn-default btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+								          <i class="fa fa-cog"></i><span class="caret"></span>
 								    </button>
 								     <ul class="dropdown-menu" role="menu">
 								        <li><%= link_to edit_kpi_path(kpi), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-kpi'} do %><i class="fa fa-edit"></i> Edit<% end %>
@@ -43,8 +43,8 @@
 							                                <div class="actions pull-right">
 							                                	<% if current_user.admin? %>
 							                                	<div class="btn-group">
-								                                       <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-								                                        <i class="fa fa-cog" style="color:white"></i><span class="caret"></span>
+								                                       <button type="button" class="btn btn-default btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+								                                        <i class="fa fa-cog"></i><span class="caret"></span>
 								                                      </button>
 								                                      <ul class="dropdown-menu" role="menu">
 								                                        <li><%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-edit"></i> Edit<% end %></li>
@@ -73,8 +73,8 @@
 							                                <div class="actions pull-right">
 							                                	<% if current_user.admin? %>
 							                                	<div class="btn-group">
-								                                       <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-								                                        <i class="fa fa-cog" style="color:white"></i><span class="caret"></span>
+								                                       <button type="button" class="btn btn-default btn-trans btn-xs dropdown-toggle" data-toggle="dropdown">
+								                                        <i class="fa fa-cog"></i><span class="caret"></span>
 								                                      </button>
 								                                      <ul class="dropdown-menu" role="menu">
 								                                        <li><%= link_to edit_indicator_path(indicator), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  do %><i class="fa fa-edit"></i> Edit<% end %></li>
