--- a/app/views/indicators/index.html.erb
+++ b/app/views/indicators/index.html.erb
@@ -1,35 +1,35 @@
 <section class="main-content-wrapper">
 	<section id="main-content">
-	    <div class="row">
-			<% @kpis.each.with_index do |kpi, index| %>
-				<div class="col-md-3 col-sm-6">
-					<div class="dashboard-tile detail tile-<%= kpi.color %>">
-						<div class="content">
-							<% if current_user.admin? %>
-								<div class="btn-group">
-								    <button type="button" class="btn btn-default btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
-								          <i class="fa fa-cog"></i><span class="caret"></span>
-								    </button>
-								     <ul class="dropdown-menu" role="menu">
-								        <li><%= link_to edit_kpi_path(kpi), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-kpi'} do %><i class="fa fa-edit"></i> Edit<% end %>
-								        </li>
-								        <li><%= link_to kpi_path(kpi),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button" do %><i class="fa fa-trash-o"></i> Delete<% end %>
-								       	</li>
-								      </ul>
-								</div>
-							<% end %>
-							<h1 class="text-left timer" data-speed="2500" data-to="180" data-from="0">
-								<%= kpi.datum %>
-							</h1>
-								<p><%= kpi.name %></p>
-						</div>
-						<div class="icon">
-							<i class="fa fa-warning"></i>
-						</div>
-					</div>
-				</div>
-			<% end %>
-		</div>
+								    <div class="row">
+										<% @kpis.each.with_index do |kpi, index| %>
+											<div class="col-md-3 col-sm-6">
+												<div class="dashboard-tile detail tile-<%= kpi.color %>">
+													<div class="content">
+														<% if current_user.admin? %>
+															<div class="btn-group">
+															    <button type="button" class="btn btn-default btn-xs btn-trans dropdown-toggle" data-toggle="dropdown">
+															          <i class="fa fa-cog"></i><span class="caret"></span>
+															    </button>
+															     <ul class="dropdown-menu" role="menu">
+															        <li><%= link_to edit_kpi_path(kpi), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-kpi'} do %><i class="fa fa-edit"></i> Edit<% end %>
+															        </li>
+															        <li><%= link_to kpi_path(kpi),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "button" do %><i class="fa fa-trash-o"></i> Delete<% end %>
+															       	</li>
+															      </ul>
+															</div>
+														<% end %>
+														<h1 class="text-left timer" data-speed="2500" data-to="180" data-from="0">
+															<%= kpi.datum %>
+														</h1>
+															<p><%= kpi.name %></p>
+													</div>
+													<div class="icon">
+														<i class="fa fa-warning"></i>
+													</div>
+												</div>
+											</div>
+										<% end %>
+									</div>
            
 
 
@@ -57,7 +57,7 @@
 							                            <div class="panel-body">
 															<div id="graph" style="min-width: 100%; height: 100%; margin: 0 auto">
 																<h2 class="title"></h2>
-																	<%= high_chart(indicator.name.gsub(" ","_"), @charts[@index]) %>
+																	<%= high_chart(('a'..'z').to_a.shuffle.join, @charts[@index]) %>
 																	<% @index += 1 %>
 															</div>
 														</div>
@@ -88,7 +88,7 @@
 							                            <div class="panel-body">
 															<div id="graph" style="min-width: 100%; height: 100%; margin: 0 auto">
 																<h2 class="title"></h2>
-																	<%= high_chart(indicator.name.gsub(" ","_"), @charts[@index]) %>
+																	<%= high_chart(('a'..'z').to_a.shuffle.join, @charts[@index]) %>
 																	<% @index += 1 %>
 															</div>
 														</div>
