--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,8 @@
                 <li class="<%= 'active' if current_page?(root_path) %>">
                     <%= link_to root_path, data: { turbolinks: false } do %><i class="fa fa-bar-chart"></i> indicateurs<% end %>
                 </li>
-                <li>
-                    <%= link_to indicators_path do %><i class="fa fa-book"></i> documentation<% end %>
+                <li class="<%= 'active' if current_page?(documentations_path) %>">
+                    <%= link_to documentations_path, data: { turbolinks: false } do %><i class="fa fa-book"></i> documentation<% end %>
                 </li>
             </ul>
         </nav>
