--- a/app/views/documentations/index.html.erb
+++ b/app/views/documentations/index.html.erb
@@ -35,7 +35,7 @@
                                       <td><%= documentation.format%></td>
                                       <td><%= documentation.title %></td>
                                       <td><%= documentation.version %></td>
-                                      <td width="5%"><%= link_to new_documentation_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new', :class => "btn btn-primary"}  do %><i class="fa fa-search"></i> Show<% end %></td></td>
+                                      <td width="5%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"></i> show<% end %></td></td>
                                       <td width="5%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i> Edit<% end %></td>
                                       <td width="5%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger" do %><i class="fa fa-trash-o"></i> Delete<% end %></td>
                                     </tr> 
