--- a/app/views/documentations/index.html.erb
+++ b/app/views/documentations/index.html.erb
@@ -20,8 +20,9 @@
                               <table id="documentations" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                 <thead>
                                   <tr>
-                                    <th>Format</th>
+                                    <th>Processus</th>
                                     <th>Title</th>
+                                    <th>Format</th>
                                     <th>Version</th>
                                     <th>Show</th>
                                     <th>Edit</th>
@@ -32,12 +33,13 @@
                                 <tbody>
                                     <% @documentations.each do |documentation| %>
                                     <tr>
-                                      <td><%= documentation.format%></td>
+                                      <td width="10%"><%= documentation.process %></td>
                                       <td><%= documentation.title %></td>
-                                      <td><%= documentation.version %></td>
-                                      <td width="5%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"></i> show<% end %></td></td>
-                                      <td width="5%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i> Edit<% end %></td>
-                                      <td width="5%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger" do %><i class="fa fa-trash-o"></i> Delete<% end %></td>
+                                      <td width="5%"><%= File.extname(documentation.file.url).strip.downcase[1..-1].partition("?").first%></td>
+                                      <td width="5%"><%= documentation.version %></td>
+                                      <td width="5%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"></i><% end %></td></td>
+                                      <td width="5%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i><% end %></td>
+                                      <td width="5%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger" do %><i class="fa fa-trash-o"></i><% end %></td>
                                     </tr> 
 
                                     <% end %>
