--- a/app/views/documentations/_form.html.erb
+++ b/app/views/documentations/_form.html.erb
@@ -20,6 +20,10 @@
                   <%= f.label :process %><br>
                   <%= f.select(:process, ['RH','Production','Achat','Qualité','Finance','Maintenance','Vente'], {}, { :class => 'form-control' }) %>
               </p>
+               <p>
+                  <%= f.label :doc %><br>
+                  <%= f.select(:doc, ['Processus','Procédure','Instruction'], {}, { :class => 'form-control' }) %>
+              </p>
               <p>
                   <%= f.label :format %><br>
                   <%= f.text_field :format,:placeholder => "Entrer un format", :class=>"form-control" %>
