--- a/app/views/documentations/index.html.erb
+++ b/app/views/documentations/index.html.erb
@@ -16,11 +16,12 @@
                             <div class="panel-body">
 
                               <p id="notice"><%= notice %></p>
-                             
+                              <%= link_to new_documentation_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new', :class => "btn btn-primary"}  do %><i class="fa fa-upload"></i> New documentation<% end %>
                               <table id="documentations" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                 <thead>
                                   <tr>
                                     <th>Processus</th>
+                                    <th>Type</th>
                                     <th>Title</th>
                                     <th>Format</th>
                                     <th>Version</th>
@@ -34,12 +35,13 @@
                                     <% @documentations.each do |documentation| %>
                                     <tr>
                                       <td width="10%"><%= documentation.process %></td>
+                                      <td width="10%"><%= documentation.doc %></td>
                                       <td><%= documentation.title %></td>
                                       <td width="5%"><%= File.extname(documentation.file.url).strip.downcase[1..-1].partition("?").first%></td>
-                                      <td width="5%"><%= documentation.version %></td>
-                                      <td width="5%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"></i><% end %></td></td>
-                                      <td width="5%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i><% end %></td>
-                                      <td width="5%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger" do %><i class="fa fa-trash-o"></i><% end %></td>
+                                      <td width="5%">Version <%= documentation.version %></td>
+                                      <td width="4%"> <%= link_to documentation.file.url, target: "_blank", :class => "btn btn-primary" do %><i class="fa fa-search"></i><% end %></td></td>
+                                      <td width="4%"><%= link_to edit_documentation_path(documentation), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i><% end %></td>
+                                      <td width="4%"><%= link_to documentation_path(documentation),data: {:confirm => 'Are you sure?'}, :method => :delete, :class => "btn btn-danger", :style=>'color:#FFFFFF;' do %><i class="fa fa-trash-o"></i><% end %></td>
                                     </tr> 
 
                                     <% end %>
@@ -47,8 +49,6 @@
                               </table>
 
                               <br>
-
-                              <%= link_to new_documentation_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-new', :class => "btn btn-primary"}  do %><i class="fa fa-plus"></i> New documentation<% end %>
 
           </div>
         </div>
@@ -61,7 +61,12 @@
 
   <script type="text/javascript">
     $(document).ready(function() {
-        $('#documentations').DataTable();
+        $('#documentations').DataTable({
+    
+    "bLengthChange": false,
+    "bFilter": true,
+    "bInfo": false,
+    "bAutoWidth": false });
     } );
   </script>
   
