--- a/app/views/documentations/index.html.erb
+++ b/app/views/documentations/index.html.erb
@@ -62,7 +62,7 @@
   <script type="text/javascript">
     $(document).ready(function() {
         $('#documentations').DataTable({
-    
+    "pageLength": 50,
     "bLengthChange": false,
     "bFilter": true,
     "bInfo": false,
