--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,9 @@
                 <li class="<%= 'active' if current_page?(documentations_path) %>">
                     <%= link_to documentations_path, data: { turbolinks: false } do %><i class="fa fa-book"></i> documentation<% end %>
                 </li>
+                <li class="<%= 'active' if current_page?(todo_lists_path) %>">
+                    <%= link_to todo_lists_path, data: { turbolinks: false } do %><i class="fa fa-tasks"></i> task management<% end %>
+                </li>
             </ul>
         </nav>
         <!--sidebar left end-->
