--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,5 +1,6 @@
 <section class="main-content-wrapper">
 	<section id="main-content">
+      
           <div class="row">
                     <div class="col-md-12">
                         <!--breadcrumbs start -->
@@ -14,25 +15,57 @@
           <div class="col-md-12">
               <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h3 class="panel-title"><%= @todo_list.title %></h3>
-                        <div class="actions pull-right">
-                            <i class="fa fa-chevron-down"></i>
-                            <i class="fa fa-times"></i>
-                        </div>
+                      <h3 class="panel-title">Create a task</h3>
                     </div>
                     <div class="panel-body">
-                       <table id="todolist" class="table table-striped" cellspacing="0" width="100%">
+                            <%= render "todo_items/form" %>
+                    </div>
+                  </div>
+           </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+              <span style="color: #9eafba;text-decoration: none;font-size: 1.5em;"><i class="fa fa-tag fa-1x"> Filter :</i></span>
+              
+              <span class="btn btn-primary btn-sm"><%= link_to "All", todo_list_path(@todo_list), :style=>'color:#FFFFFF;' %></span>
+              
+              <% if TodoItem.tag_counts.length > 0 %>
+                <% tag_cloud TodoItem.tag_counts, %w(css1 css2 css3 css4) do |tag| %>
+                    <span class="btn btn-primary btn-sm"><%= link_to tag.name, tag_path(@todo_list, tag.name), :style=>'color:#FFFFFF;'  %></span>
+                <% end %>
+              <% else -%>
+                <%= content_tag :p, 'No tags' %>
+              <% end %>
+          </div>
+       </div>
+       <br>
+
+
+        <div class="row">
+          <div class="col-md-12">
+              <div class="panel panel-default">
+                    
+                    <div class="panel-body">
+                       <table id="tasks" class="table table-hover" cellspacing="0" width="100%">
                         <thead>
                           <tr>
                             <th>Title</th>
                             <th>Deadline</th>
+                            <th>Tags</th>
                             <th>Edit</th>
                             <th>Delete</th>
                           </tr>
                         </thead>
                           <tbody>
-                            <%= render @todo_list.todo_items %>
-                            <%= render "todo_items/form" %>
+                              <% @todo_item.each do |todo_item| %>
+                                      <tr>
+                                        <td style="vertical-align: middle;"><%= todo_item.content %></td>
+                                        <td width="10%" style="vertical-align: middle;"><%= todo_item.deadline %></td>
+                                        <td width="30%" style="vertical-align: middle;" ><%= raw todo_item.tag_list.map{|t| link_to t, tag_path(@todo_list, t), :class =>"btn btn-primary btn-xs"}.join(' ')%></td>
+                                         <td width="5%"><%= link_to edit_todo_list_todo_item_path(@todo_list, todo_item.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-edit', :class => "btn btn-default"}  do %><i class="fa fa-edit"></i><% end %></td>
+                                        <td width="5%" style="vertical-align: middle;"><%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: 'Are you sure?'}, :class => "btn btn-danger", :style=>'color:#FFFFFF;' do %><i class="fa fa-trash-o"></i><% end %></td>
+                                    </tr>
+                              <% end %>
                           </tbody>
                       </table>
                     </div>
@@ -41,3 +74,27 @@
         </div>
     </section>
 </section>
+
+<div id="modal-edit" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+        </div>
+      </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker();
+  });
+</script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+        $('#tasks').DataTable({
+    "pageLength": 50,
+    "bLengthChange": false,
+    "bFilter": true,
+    "bInfo": false,
+    "bAutoWidth": false });
+    } );
+  </script>
