--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,8 @@
  *= require_tree .
  *= require bootstrap.min
  *= require jquery-ui
-  *= require dataTables/jquery.dataTables
+ *= require bootstrap-datepicker
+ *= require dataTables/jquery.dataTables
  *= require_self
 
  */
